# brain_subnetwork_jepa

./: .gitignore  LICENSE  README.md  a.ipynb  eda.ipynb  pyproject.toml  requirements.txt
configs/data/: glasser379.yaml
configs/eval/: linear_probe.yaml
configs/pretrain/: default.yaml  gcn_base.yaml  graph_transformer_base.yaml
data/atlas/: glasser379_to_rsn12.csv
scripts/: debug_diagnostics.py  linear_probe.py  prepare_data.py  pretrain.py
src/brain_jepa/: __init__.py
src/brain_jepa/data/: __init__.py  atlas.py  connectivity.py  dataset.py  transforms.py  windowing.py
src/brain_jepa/evaluation/: __init__.py  diagnostics.py  linear_probe.py
src/brain_jepa/masking/: __init__.py  spatiotemporal_masking.py  subnetwork_masking.py
src/brain_jepa/models/: __init__.py  bs_jepa.py  pooling.py  predictor.py  st_bs_jepa.py  st_encoder.py  st_predictor.py
src/brain_jepa/models/encoders/: __init__.py  gcn.py  graph_transformer.py
src/brain_jepa/training/: __init__.py  ema.py  losses.py  optim.py  trainer.py
src/brain_jepa/utils/: __init__.py  config.py  logging.py  seed.py
tests/: test_dataset.py  test_masking.py  test_model.py  test_spatiotemporal.py
