[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-jepa"
version = "0.1.0"
description = "Brain Subnetwork JEPA: self-supervised learning on resting-state fMRI via subnetwork prediction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]
wandb = ["wandb>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary instead of if-else
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is expected in tests

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
